--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-345.1KB/s(Youtube:不良林), server: 185.167.116.253, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 波兰-1.37MB/s(Youtube:不良林), server: 217.30.10.64, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
-  - {name: 🇨🇳 中国-11.07MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-390.5KB/s(Youtube:不良林), server: 213.183.53.207, port: 9030, type: ss, cipher: aes-256-cfb, password: GeregetR8cvQHzYr}
-  - {name: 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林), server: 185.167.117.171, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
-  - {name: 🇺🇸 美国-1.62MB/s(Youtube:不良林), server: 167.88.63.82, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 保加利亚-648.5KB/s(Youtube:不良林), server: 213.183.63.217, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇺🇸 美国-296.3KB/s(Youtube:不良林), server: 172.99.188.71, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇷🇺 俄罗斯联邦-225.3KB/s(Youtube:不良林), server: 213.183.53.221, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 🇳🇱 荷兰-1.85MB/s(Youtube:不良林), server: 213.183.59.218, port: 9053, type: ss, cipher: aes-256-cfb, password: SBM7R883jBmnqe6C}
+  - {name: 🇺🇸 美国-3.35MB/s(Youtube:不良林), server: 38.68.135.18, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-300.8KB/s(Youtube:不良林), server: 167.88.63.82, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-3.43MB/s(Youtube:不良林), server: 169.197.142.39, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇺🇸 美国-3.63MB/s(Youtube:不良林), server: 169.197.142.39, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-3.52MB/s(Youtube:不良林), server: 169.197.142.39, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-345.1KB/s(Youtube:不良林)
-      - 波兰-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-390.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 保加利亚-648.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-296.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-225.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-345.1KB/s(Youtube:不良林)
-      - 波兰-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-390.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 保加利亚-648.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-296.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-225.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-345.1KB/s(Youtube:不良林)
-      - 波兰-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-390.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 保加利亚-648.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-296.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-225.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-345.1KB/s(Youtube:不良林)
-      - 波兰-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-390.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 保加利亚-648.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-296.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-225.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-345.1KB/s(Youtube:不良林)
-      - 波兰-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-390.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 保加利亚-648.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-296.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-225.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-345.1KB/s(Youtube:不良林)
-      - 波兰-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-390.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 保加利亚-648.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-296.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-225.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-345.1KB/s(Youtube:不良林)
-      - 波兰-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-390.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 保加利亚-648.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-296.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-225.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
