--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 保加利亚-648.5KB/s(Youtube:不良林), server: 213.183.63.217, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
-  - {name: 🇺🇸 美国-296.3KB/s(Youtube:不良林), server: 172.99.188.71, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇷🇺 俄罗斯联邦-225.3KB/s(Youtube:不良林), server: 213.183.53.221, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
-  - {name: 🇳🇱 荷兰-1.85MB/s(Youtube:不良林), server: 213.183.59.218, port: 9053, type: ss, cipher: aes-256-cfb, password: SBM7R883jBmnqe6C}
-  - {name: 🇺🇸 美国-3.35MB/s(Youtube:不良林), server: 38.68.135.18, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-300.8KB/s(Youtube:不良林), server: 167.88.63.82, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇦🇺 澳大利亚-2.06MB/s(Youtube:不良林), server: 185.167.116.38, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
+  - {name: 🇩🇪 德国-2.00MB/s(Youtube:不良林), server: 5.183.179.141, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇺🇸 美国-2.14MB/s(Youtube:不良林), server: 38.114.114.69, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 波兰-153.2KB/s(Youtube:不良林), server: 217.30.10.63, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇳🇱 荷兰-1.23MB/s(Youtube:不良林), server: 213.183.59.206, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
+  - {name: 🇺🇸 美国-3.39MB/s(Youtube:不良林), server: 38.114.114.69, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-1.51MB/s(Youtube:不良林), server: 167.88.63.82, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-3.43MB/s(Youtube:不良林), server: 169.197.142.39, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇺🇸 美国-3.63MB/s(Youtube:不良林), server: 169.197.142.39, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-3.52MB/s(Youtube:不良林), server: 169.197.142.39, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇺🇸 美国-3.28MB/s(Youtube:不良林), server: 169.197.142.39, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 保加利亚-648.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-296.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-225.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.06MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 波兰-153.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 保加利亚-648.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-296.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-225.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.06MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 波兰-153.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 保加利亚-648.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-296.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-225.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.06MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 波兰-153.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 保加利亚-648.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-296.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-225.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.06MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 波兰-153.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 保加利亚-648.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-296.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-225.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.06MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 波兰-153.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 保加利亚-648.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-296.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-225.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.06MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 波兰-153.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 保加利亚-648.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-296.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-225.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.06MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 波兰-153.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
