--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-2.06MB/s(Youtube:不良林), server: 185.167.116.38, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
-  - {name: 🇩🇪 德国-2.00MB/s(Youtube:不良林), server: 5.183.179.141, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇺🇸 美国-2.14MB/s(Youtube:不良林), server: 38.114.114.69, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 波兰-153.2KB/s(Youtube:不良林), server: 217.30.10.63, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇳🇱 荷兰-1.23MB/s(Youtube:不良林), server: 213.183.59.206, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
+  - {name: 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林), server: 213.183.53.214, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇩🇪 德国-327.6KB/s(Youtube:不良林), server: 5.183.179.141, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
+  - {name: 🇷🇺 俄罗斯联邦-1.93MB/s(Youtube:不良林), server: 213.183.53.179, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
+  - {name: 🇳🇱 荷兰-1.95MB/s(Youtube:不良林), server: 213.183.59.185, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇩🇪 德国-1.16MB/s(Youtube:不良林), server: 5.183.179.141, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
   - {name: 🇺🇸 美国-3.39MB/s(Youtube:不良林), server: 38.114.114.69, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-1.51MB/s(Youtube:不良林), server: 167.88.63.82, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-3.43MB/s(Youtube:不良林), server: 169.197.142.39, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-3.63MB/s(Youtube:不良林), server: 169.197.142.39, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-2.72MB/s(Youtube:不良林), server: 169.197.142.39, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-2.62MB/s(Youtube:不良林), server: 169.197.142.39, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-3.28MB/s(Youtube:不良林), server: 169.197.142.39, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.06MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
-      - 波兰-153.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
+      - 🇩🇪 德国-327.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.93MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.95MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-2.06MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
-      - 波兰-153.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
+      - 🇩🇪 德国-327.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.93MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.95MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.06MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
-      - 波兰-153.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
+      - 🇩🇪 德国-327.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.93MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.95MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-2.06MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
-      - 波兰-153.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
+      - 🇩🇪 德国-327.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.93MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.95MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.06MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
-      - 波兰-153.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
+      - 🇩🇪 德国-327.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.93MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.95MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.06MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
-      - 波兰-153.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
+      - 🇩🇪 德国-327.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.93MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.95MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.06MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
-      - 波兰-153.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
+      - 🇩🇪 德国-327.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.93MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.95MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
