--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林), server: 213.183.53.214, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 🇩🇪 德国-327.6KB/s(Youtube:不良林), server: 5.183.179.141, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
-  - {name: 🇷🇺 俄罗斯联邦-1.93MB/s(Youtube:不良林), server: 213.183.53.179, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
-  - {name: 🇳🇱 荷兰-1.95MB/s(Youtube:不良林), server: 213.183.59.185, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
-  - {name: 🇩🇪 德国-1.16MB/s(Youtube:不良林), server: 5.183.179.141, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林), server: 213.183.53.179, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
+  - {name: 🇷🇺 俄罗斯联邦-257.5KB/s(Youtube:不良林), server: 213.183.53.202, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 波兰-2.14MB/s(Youtube:不良林), server: 217.30.10.66, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
+  - {name: 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林), server: 185.167.117.171, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林), server: 185.167.116.24, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
   - {name: 🇺🇸 美国-3.39MB/s(Youtube:不良林), server: 38.114.114.69, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-1.51MB/s(Youtube:不良林), server: 167.88.63.82, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-2.72MB/s(Youtube:不良林), server: 169.197.142.39, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇺🇸 美国-2.62MB/s(Youtube:不良林), server: 169.197.142.39, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-3.28MB/s(Youtube:不良林), server: 169.197.142.39, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-2.84MB/s(Youtube:不良林), server: 169.197.142.39, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
-      - 🇩🇪 德国-327.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.93MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.95MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-257.5KB/s(Youtube:不良林)
+      - 波兰-2.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
-      - 🇩🇪 德国-327.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.93MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.95MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-257.5KB/s(Youtube:不良林)
+      - 波兰-2.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
-      - 🇩🇪 德国-327.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.93MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.95MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-257.5KB/s(Youtube:不良林)
+      - 波兰-2.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
-      - 🇩🇪 德国-327.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.93MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.95MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-257.5KB/s(Youtube:不良林)
+      - 波兰-2.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
-      - 🇩🇪 德国-327.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.93MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.95MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-257.5KB/s(Youtube:不良林)
+      - 波兰-2.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
-      - 🇩🇪 德国-327.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.93MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.95MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-257.5KB/s(Youtube:不良林)
+      - 波兰-2.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
-      - 🇩🇪 德国-327.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.93MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.95MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-257.5KB/s(Youtube:不良林)
+      - 波兰-2.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
