--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林), server: 213.183.53.179, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
-  - {name: 🇷🇺 俄罗斯联邦-257.5KB/s(Youtube:不良林), server: 213.183.53.202, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
-  - {name: 波兰-2.14MB/s(Youtube:不良林), server: 217.30.10.66, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
-  - {name: 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林), server: 185.167.117.171, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
-  - {name: 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林), server: 185.167.116.24, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
+  - {name: 波兰-2.31MB/s(Youtube:不良林), server: 217.30.10.67, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
+  - {name: 🇷🇺 俄罗斯联邦-668.2KB/s(Youtube:不良林), server: 213.183.53.207, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
+  - {name: 🇺🇸 美国-1.89MB/s(Youtube:不良林), server: 38.68.135.19, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 台湾-166.1KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 波兰-1.02MB/s(Youtube:不良林), server: 217.30.10.67, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
   - {name: 🇺🇸 美国-3.39MB/s(Youtube:不良林), server: 38.114.114.69, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-1.51MB/s(Youtube:不良林), server: 167.88.63.82, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-2.72MB/s(Youtube:不良林), server: 169.197.142.39, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-257.5KB/s(Youtube:不良林)
-      - 波兰-2.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
+      - 波兰-2.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-668.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-166.1KB/s(Youtube:不良林)
+      - 波兰-1.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-257.5KB/s(Youtube:不良林)
-      - 波兰-2.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
+      - 波兰-2.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-668.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-166.1KB/s(Youtube:不良林)
+      - 波兰-1.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-257.5KB/s(Youtube:不良林)
-      - 波兰-2.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
+      - 波兰-2.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-668.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-166.1KB/s(Youtube:不良林)
+      - 波兰-1.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
@@ -66,17 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-166.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-257.5KB/s(Youtube:不良林)
-      - 波兰-2.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
+      - 波兰-2.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-668.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-166.1KB/s(Youtube:不良林)
+      - 波兰-1.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
@@ -87,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-257.5KB/s(Youtube:不良林)
-      - 波兰-2.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
+      - 波兰-2.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-668.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-166.1KB/s(Youtube:不良林)
+      - 波兰-1.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
@@ -103,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-257.5KB/s(Youtube:不良林)
-      - 波兰-2.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
+      - 波兰-2.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-668.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-166.1KB/s(Youtube:不良林)
+      - 波兰-1.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
@@ -128,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-257.5KB/s(Youtube:不良林)
-      - 波兰-2.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
+      - 波兰-2.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-668.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-166.1KB/s(Youtube:不良林)
+      - 波兰-1.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
